<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/backgrond"
    android:padding="20dp"
    tools:context=".DashboardActivity">

    <!-- Card View chứa nội dung -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="30dp"
            android:gravity="center">

            <!-- Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_title"
                android:textAlignment="center"
                android:textColor="@color/blue_background"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginBottom="30dp" />

            <!-- Remote Control Button -->
            <Button
                android:id="@+id/btnRemoteControl"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/btn_remote_control"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/blue_background"
                app:cornerRadius="10dp"
                android:layout_marginBottom="15dp" />

            <!-- Camera Stream Button -->
            <Button
                android:id="@+id/btnCameraStream"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/btn_camera_stream"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:backgroundTint="@android:color/holo_purple"
                app:cornerRadius="10dp"
                android:layout_marginBottom="15dp" />

            <!-- Server Status Button -->
            <Button
                android:id="@+id/btnServerStatus"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/btn_server_status"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:backgroundTint="@android:color/holo_orange_dark"
                app:cornerRadius="10dp"
                android:layout_marginBottom="15dp" />

            <!-- Back Button -->
            <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Quay Lại"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:backgroundTint="@android:color/holo_red_dark"
                app:cornerRadius="10dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
